src/test/deca/context/invalid/AssignmentCast.deca









{


	int a = 3;
	boolean k = (float) (a);
	
}
